3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

common/image.c, include/define.h, include/global.h: Add empty_face structure
   and appropriate code to initialize it.  This is used for the server side
   look selection.
include/newserver.h: Add NUM_LOOK_OBJECTS to control number of look objects
   to send at any one time.  add look_position field to the newsocket
   structure.
server/move.c: clear look position as player moves.
server/player.c: initalize look_position element in structure.
socket/item.c: modify esrv_draw_look to sne NUM_LOOK_OBJECTS at any one
   time, and to also send pseudo objects that lets the player scroll up and down.
   modify ApplyCmd so that if it detects the application of one pseudo objects
   to adjust the look_position.
MSW 2001-03-29

common/readable.c: Name spellbooks based on level of spell, and not
    just randomly.  Patch by Preston Crow, applied by Mark Wedel 2001-03-29

configure, configure.in, include/autoconf.h, includes.h: add check for
   time.h and include it if we find it.
socket/item.c: esrv_move_object - have it check to see if the object is
   already on the ground before we try to re-drop it.  Likewise, check
   to see if it is already in players inventory before we try to pick
   it up.
common/object.c: Don't send face updates to the client or make
   the space as needing to be redrawn.  Client now deals with animation 
   of the look window on its own. 
utils/(metaserver.pl crossloop add_throw.perl crossloop.pl) 
lib/(Makefie.in, checkarch.pl collect.pl xpmtopix.pl) - - deleted
   from CVS - '.in' versions of these files now exist and the real